--- a/app/views/users/add-animal-form.template.html
+++ b/app/views/users/add-animal-form.template.html
@@ -488,7 +488,7 @@
 			</tr>
 			<tr>
 				<td>Trình tự DNA</td>
-				<td><input type="file" ng-model="data.dinhKemTrinhTuDNA" multiple title="{{tooltips[72]}}" name="dinhKemTrinhTuDNA" class="input-form"></td>
+				<td><input type="file" ng-model="data.dinhKemTrinhTuDNA" multiple accept=".doc, .docx, .pdf" title="{{tooltips[72]}}" name="dinhKemTrinhTuDNA" class="input-form"></td>
 			</tr>
 			<tr>
 				<td>Công bố/thông tin quốc tế (genbank...)</td>
@@ -618,7 +618,7 @@
 			</tr>
 			<tr>
 				<td><label>63. Hồ sơ nhập mẫu vật đi kèm:</label></td>
-				<td><input type="file" ng-model="data.giayPhepNhapMau" title="{{tooltips[89]}}" name="giayPhepNhapMau" class="input-form" accept=".doc, docx, .pdf"></td>
+				<td><input type="file" ng-model="data.hoSoNhapMauVatDiKem" title="{{tooltips[89]}}" name="hoSoNhapMauVatDiKem" class="input-form" accept=".doc, docx, .pdf"></td>
 			</tr>
 			<tr>
 				<td><label>64. Người nhập phiếu mẫu vật<span class="has-required"> (*)</span>:</label></td>
