--- a/app/views/users/edit/edit-animal-form.template.html
+++ b/app/views/users/edit/edit-animal-form.template.html
@@ -596,7 +596,7 @@
 			</tr>
 			<tr>
 				<td><label>63. Hồ sơ nhập mẫu vật đi kèm:</label></td>
-				<td><input type="file" ng-model="data.giayPhepNhapMau" title="{{tooltips[89]}}" name="giayPhepNhapMau" class="input-form" accept=".doc, docx, .pdf"></td>
+				<td><input type="file" ng-model="data.hoSoNhapMauVatDiKem" title="{{tooltips[89]}}" name="hoSoNhapMauVatDiKem" class="input-form" accept=".doc, docx, .pdf"></td>
 			</tr>
 			<tr>
 				<td><label>64. Người nhập phiếu MV <span class="has-required"> (*)</span>:</label></td>
