--- a/app/views/users/edit/edit-vegetable-form.template.html
+++ b/app/views/users/edit/edit-vegetable-form.template.html
@@ -438,11 +438,11 @@
 				<tr><td><label>44. Thông tin DNA</label></td></tr>
 				<tr>
 					<td>Vị trí lấy mẫu DNA (lá, thân, rễ,...):</td>
-					<td><input type="text" id="viTriLayMauDNA" title="{{tooltips[69]}}" name="boPhanLayMauDNA" ng-model="data.boPhanLayMauDNA" class="input-form"></td>
+					<td><input type="text" id="viTriLayMauDNA" title="{{tooltips[69]}}" name="viTriLayMauDNA" ng-model="data.viTriLayMauDNA" class="input-form"></td>
 				</tr>
 				<tr>
 					<td>Mẫu DNA (khô, nước...):</td>
-					<td><input type="text" id="mauDNA" title="{{tooltips[70]}}" name="trangThaiGiuMauDNA" ng-model="data.trangThaiGiuMauDNA" class="input-form"></td>
+					<td><input type="text" id="mauDNA" title="{{tooltips[70]}}" name="mauDNA" ng-model="data.mauDNA" class="input-form"></td>
 				</tr>
 				<tr>
 					<td>Vùng gen phân tích: </td>
@@ -450,7 +450,7 @@
 				</tr>
 				<tr>
 					<td>Trình tự DNA</td>
-					<td><input type="text" multiple title="{{tooltips[72]}}" name="trinhTuDNA" ng-model="data.trinhTuDNA" class="input-form"></td>
+					<td><input type="file" multiple accept="image/x-png, image/gif, image/jpeg, .doc, .docx, .pdf" multiple title="{{tooltips[72]}}" name="trinhTuDNA" ng-model="data.trinhTuDNA" class="input-form"></td>
 				</tr>
 				<tr>
 					<td>Công bố/thông tin quốc tế (genbank...)</td>
