--- a/app/views/users/edit/edit-land-form.template.html
+++ b/app/views/users/edit/edit-land-form.template.html
@@ -381,7 +381,7 @@
 				</tr>
 				<tr>
 					<td>Đính kèm Xử lý chế tác:</td>
-					<td><input type="file" multiple title="{{tooltips[57]}}" name="dinhKemXulyCheTac" ng-model="data.dinhKemXulyCheTac" accept=".doc, .pdf" class="input-form"></td>
+					<td><input type="file" multiple title="{{tooltips[57]}}" name="dinhKemXuLyCheTac" ng-model="data.dinhKemXuLyCheTac" accept=".doc, .pdf" class="input-form"></td>
 				</tr>
 				<tr>
 					<td>Phương thức xử lý chế tác:</td>
