--- a/app/views/users/add-animal-form.template.html
+++ b/app/views/users/add-animal-form.template.html
@@ -108,7 +108,7 @@
 			</tr>
 			<tr>
 				<td><label>08. Ngày định tên: </label></td>
-				<td><input type="date" title="{{tooltips['ngayDinhTen']}}" name="ngayDinhTen" ng-model="data.ngayDinhTen" class="input-form datepicker"></td>
+				<td><input type="text" title="{{tooltips['ngayDinhTen']}}" name="ngayDinhTen" ng-model="data.ngayDinhTen" class="input-form datepicker"></td>
 			</tr>
 			<tr>
 				<td><label>09. Tên Việt Nam <span class="has-required"> (*)</span>:</label></td>
@@ -239,7 +239,7 @@
 			<h3 class="h3-title">NHÓM DỮ LIỆU THU MẪU</h3>
 			<tr>
 				<td><label>19. Thời gian thu mẫu <span class="has-required"> (*)</span>:</label></td>
-				<td><input type="date" ng-model="data.thoiGianThuMau" title="{{tooltips['thoiGianThuMau']}}" name="thoiGianThuMau" class="input-form datepicker" required></td>
+				<td><input type="text" ng-model="data.thoiGianThuMau" title="{{tooltips['thoiGianThuMau']}}" name="thoiGianThuMau" class="input-form datepicker" required></td>
 			</tr>
 			<tr>
 				<td><label>20. Người thu mẫu <span class="has-required"> (*)</span>:</label></td>
@@ -373,7 +373,7 @@
 			<h3 class="h3-title">NHÓM DỮ LIỆU PHÂN TÍCH MẪU</h3>
 			<tr>
 				<td><label>33. Thời gian phân tích/giám định/định loại mẫu:</label></td>
-				<td><input type="date" ng-model="data.thoiGianPhanTich" title="{{tooltips['thoiGianPhanTich']}}" name="thoiGianPhanTich" class="input-form datepicker"></td>
+				<td><input type="text" ng-model="data.thoiGianPhanTich" title="{{tooltips['thoiGianPhanTich']}}" name="thoiGianPhanTich" class="input-form datepicker"></td>
 			</tr>
 			<tr>
 				<td><label>34. Người phân tích/giám định/định loại mẫu <span class="has-required"> (*)</span>:</label></td>
@@ -542,7 +542,7 @@
 			<h3 class="h3-title">NHÓM DỮ LIỆU LƯU TRỮ, BẢO QUẢN MẪU</h3>
 			<tr>
 				<td><label>53. Ngày nhập mẫu: </label></td>
-				<td><input type="date" ng-model="data.ngayNhapMau" title="{{tooltips['ngayNhapMau']}}" name="ngayNhapMau" class="input-form datepicker"></td>
+				<td><input type="text" ng-model="data.ngayNhapMau" title="{{tooltips['ngayNhapMau']}}" name="ngayNhapMau" class="input-form datepicker"></td>
 			</tr>
 			<tr>
 				<td><label>54. Người giao mẫu: </label></td>
