--- a/app/views/users/add-animal-form.template.html
+++ b/app/views/users/add-animal-form.template.html
@@ -459,7 +459,7 @@
 			</tr>
 			<tr>
 				<td>Thời gian xử lý chế tác:</td>
-				<td><input type="text" title="{{tooltips[63]}}" name="thoiGianXuLy" ng-model="data.thoiGianXuLy" class="input-form"></td>
+				<td><input type="date" title="{{tooltips[63]}}" name="thoiGianXuLy" ng-model="data.thoiGianXuLy" class="input-form"></td>
 			</tr>
 			<tr>
 				<td>Người xử lý, chế tác:</td>
@@ -618,7 +618,7 @@
 			</tr>
 			<tr>
 				<td><label>63. Hồ sơ nhập mẫu vật đi kèm:</label></td>
-				<td><input type="file" ng-model="data.giayPhepNhapMau" title="{{tooltips[89]}}" name="giayPhepNhapMau" class="input-form" accept=".doc, docx, .pdf"></td>
+				<td><input type="file" ng-model="data.hoSoNhapMauVatDiKem" title="{{tooltips[89]}}" name="hoSoNhapMauVatDiKem" class="input-form" accept=".doc, docx, .pdf"></td>
 			</tr>
 			<tr>
 				<td><label>64. Người nhập phiếu mẫu vật<span class="has-required"> (*)</span>:</label></td>
