--- a/app/views/users/add-vegetable-form.template.html
+++ b/app/views/users/add-vegetable-form.template.html
@@ -457,11 +457,11 @@
 				<tr><td><label>45. Thông tin DNA</label></td></tr>
 				<tr>
 					<td>Vị trí lấy mẫu DNA (lá, thân, rễ,...):</td>
-					<td><input type="text" id="viTriLayMauDNA" title="{{tooltips[69]}}" name="boPhanLayMauDNA" ng-model="data.boPhanLayMauDNA" class="input-form"></td>
+					<td><input type="text" id="viTriLayMauDNA" title="{{tooltips[69]}}" name="viTriLayMauDNA" ng-model="data.viTriLayMauDNA" class="input-form"></td>
 				</tr>
 				<tr>
 					<td>Mẫu DNA (khô, nước...):</td>
-					<td><input type="text" id="mauDNA" title="{{tooltips[70]}}" name="trangThaiGiuMauDNA" ng-model="data.trangThaiGiuMauDNA" class="input-form"></td>
+					<td><input type="text" id="mauDNA" title="{{tooltips[70]}}" name="mauDNA" ng-model="data.mauDNA" class="input-form"></td>
 				</tr>
 				<tr>
 					<td>Vùng gen phân tích: </td>
@@ -469,7 +469,7 @@
 				</tr>
 				<tr>
 					<td>Trình tự DNA</td>
-					<td><input type="text" multiple title="{{tooltips[72]}}" name="trinhTuDNA" ng-model="data.trinhTuDNA" class="input-form"></td>
+					<td><input type="file" multiple title="{{tooltips[72]}}" name="trinhTuDNA" ng-model="data.trinhTuDNA" class="input-form"></td>
 				</tr>
 				<tr>
 					<td>Công bố/thông tin quốc tế (genbank...)</td>
@@ -481,7 +481,7 @@
 				</tr>
 				<tr>
 					<td><label>47. Thông tin khác:</label></td>
-					<td><input type="text" title="{{tooltips[75]}}" name="thongTinKhac5" ng-model="data.thongTinKhac5" class="input-form"></td>
+					<td><input type="text" title="{{tooltips[75]}}" name="thongTinKhac6" ng-model="data.thongTinKhac6" class="input-form"></td>
 				</tr>	
 			</table>
 			</div>
@@ -521,7 +521,7 @@
 				</tr>
 				<tr>
 					<td><label>51. Thông tin khác:</label></td>
-					<td><input type="text" title="{{tooltips[79]}}" name="thongTinKhac6" ng-model="data.thongTinKhac6" class="input-form"></td>
+					<td><input type="text" title="{{tooltips[79]}}" name="thongTinKhac7" ng-model="data.thongTinKhac7" class="input-form"></td>
 				</tr>
 			</table>
 		</div>
@@ -616,7 +616,7 @@
 				</tr>
 				<tr>
 					<td><label>65. Thông tin khác:</label></td>
-					<td><input type="text" title="{{tooltips[96]}}" name="thongTinKhac7" ng-model="data.thongTinKhac7" class="input-form"></td>
+					<td><input type="text" title="{{tooltips[96]}}" name="thongTinKhac8" ng-model="data.thongTinKhac8" class="input-form"></td>
 				</tr>
 			</table>
 		</div>
@@ -625,7 +625,7 @@
 				<h3 class="h3-title">NHÓM DỮ LIỆU THÔNG TIN KHÁC</h3>
 				<tr>
 					<td><label>66. Thông tin khác</label></td>
-					<td><input type="text" title="{{tooltips[97]}}" name="thongTinKhac8" ng-model="data.thongTinKhac8" class="input-form"></td>
+					<td><input type="text" title="{{tooltips[97]}}" name="thongTinKhac9" ng-model="data.thongTinKhac9" class="input-form"></td>
 				</tr>
 			</table>
 		</div>
