--- a/app/views/users/add-paleontological-form.template.html
+++ b/app/views/users/add-paleontological-form.template.html
@@ -100,7 +100,7 @@
 				</tr>
 				<tr>
 					<td><label>08. Ngày định tên: </label></td>
-					<td><input type="text" title="{{tooltips[89]}}" name="ngayDinhTen" ng-model="data.ngayDinhTen" class="input-form"></td>
+					<td><input type="date" title="{{tooltips[89]}}" name="ngayDinhTen" ng-model="data.ngayDinhTen" class="input-form"></td>
 				</tr>
 				<tr>
 					<td><label>09. Tên Việt Nam  <span class="has-required">(*)</span>:</label></td>
