--- a/app/views/users/edit/edit-geological-form.template.html
+++ b/app/views/users/edit/edit-geological-form.template.html
@@ -496,12 +496,7 @@
 				<tr>
 					<td><label>61. Hình thức nhập mẫu:</label></td>
 					<td>
-						<select class="select-box" ng-init="" title="{{tooltips[72]}}" name="hinhThucNhapMau" ng-model="data.hinhThucNhapMau">
-							<option value=""></option>
-							<option value="Thu thập">Thu thập</option>
-							<option value="Hiến tặng">Hiến Tặng</option>
-							<option value="Khác">Khác</option>
-						</select>
+						<input type="text" list="hinhThucNhapMau" class="select-box" ng-model="data.hinhThucNhapMau" title="{{tooltips['hinhThucNhapMau']}}" name="hinhThucNhapMau">
 					</td>
 				</tr>
 
