fix tip edit landform

--- a/app/views/users/edit/edit-land-form.template.html
+++ b/app/views/users/edit/edit-land-form.template.html
@@ -17,23 +17,23 @@
 				<h3 class="h3-title">SỐ HIỆU</h3>
 				<tr>
 					<td><label>01. Số hiệu BTTNVN:</label></td>
-					<td><input type="text" title="{{tooltips[3]}}" name="soHieuBTTNVN" ng-model="data.soHieuBTTNVN" class="input-form"></td>
+					<td><input type="text" title="{{tooltips['soHieuBTTNVN']}}" name="soHieuBTTNVN" ng-model="data.soHieuBTTNVN" class="input-form"></td>
 				</tr>
 				<tr>
 					<td><label>02. Số hiệu bảo tàng cơ sở <span class="has-required">(*)</span>:</label></td>
-					<td><input type="text" title="{{tooltips[2]}}" name="soHieuBaoTangCS" ng-model="data.soHieuBaoTangCS" class="input-form" required></td>
+					<td><input type="text" title="{{tooltips['soHieuBaoTangCS']}}" name="soHieuBaoTangCS" ng-model="data.soHieuBaoTangCS" class="input-form" required></td>
 				</tr>
 				<tr>
 					<td><label>03. Số hiệu thực địa <span class="has-required">(*)</span>:</label></td>
-					<td><input type="text" title="{{tooltips[1]}}" name="soHieuThucDia" ng-model="data.soHieuThucDia" class="input-form" required></td>
+					<td><input type="text" title="{{tooltips['soHieuThucDia']}}" name="soHieuThucDia" ng-model="data.soHieuThucDia" class="input-form" required></td>
 				</tr>
 				<tr>
 					<td><label>04. Các kí hiệu mẫu vật khác:</label></td>
-					<td><input type="text" title="{{tooltips[5]}}" name="kyHieuMauVatKhac" ng-model="data.kyHieuMauVatKhac" class="input-form"></td>
+					<td><input type="text" title="{{tooltips['kyHieuMauVatKhac']}}" name="kyHieuMauVatKhac" ng-model="data.kyHieuMauVatKhac" class="input-form"></td>
 				</tr>
 				<tr>
 					<td><label>05. Thông tin khác:</label></td>
-					<td><input type="text" title="{{tooltips[6]}}" name="thongTinKhac1" ng-model="data.thongTinKhac1" class="input-form"></td>
+					<td><input type="text" title="{{tooltips['thongTinKhac1']}}" name="thongTinKhac1" ng-model="data.thongTinKhac1" class="input-form"></td>
 				</tr>
 			</table>
 		</div>
@@ -42,35 +42,35 @@
 				<h3 class="h3-title">TÊN MẪU</h3>
 				<tr>
 					<td><label>06. Tên theo hệ thống PL của Quốc tế:</label></td>
-					<td><input type="text"  title="{{tooltips[11]}}" name="tenTheoQuocTe" ng-model="data.tenTheoQuocTe" class="input-form"></td>
+					<td><input type="text"  title="{{tooltips['tenTheoQuocTe']}}" name="tenTheoQuocTe" ng-model="data.tenTheoQuocTe" class="input-form"></td>
 				</tr>
 				<tr>
 					<td><label>07. Người định tên: </label></td>
-					<td><input type="text" ng-model="data.nguoiDinhTen" title="{{tooltips[12]}}" name="nguoiDinhTen" class="input-form"></td>
+					<td><input type="text" ng-model="data.nguoiDinhTen" title="{{tooltips['nguoiDinhTen']}}" name="nguoiDinhTen" class="input-form"></td>
 				</tr>
 				<tr>
 					<td><label>08. Ngày định tên: </label></td>
-					<td><input type="text" class="input-form datepicker" title="{{tooltips[82]}}" name="ngayDinhTen" ng-model="data.ngayDinhTen" ></td>
+					<td><input type="text" class="input-form datepicker" title="{{tooltips['ngayDinhTen']}}" name="ngayDinhTen" ng-model="data.ngayDinhTen" ></td>
 				</tr>
 				<tr>
 					<td><label>09. Tên Việt Nam(phổ thông) <span class="has-required">(*)</span>:</label></td>
-					<td><input type="text"  title="{{tooltips[7]}}" name="tenVietNam" ng-model="data.tenVietNam" class="input-form" required></td>
+					<td><input type="text"  title="{{tooltips['tenVietNam'}}" name="tenVietNam" ng-model="data.tenVietNam" class="input-form" required></td>
 				</tr>
 				<tr>
 					<td><label>10. Tên địa phương:</label></td>
-					<td><input type="text"  title="{{tooltips[8]}}" name="tenDiaPhuong" ng-model="data.tenDiaPhuong" class="input-form"></td>
+					<td><input type="text"  title="{{tooltips['tenDiaPhuong']}}" name="tenDiaPhuong" ng-model="data.tenDiaPhuong" class="input-form"></td>
 				</tr>
 				<tr>
 					<td><label>11. Tên Tiếng Anh:</label></td>
-					<td><input type="text"  title="{{tooltips[9]}}" name="tenTiengAnh" ng-model="data.tenTiengAnh" class="input-form"></td>
+					<td><input type="text"  title="{{tooltips['tenTiengAnh']}}" name="tenTiengAnh" ng-model="data.tenTiengAnh" class="input-form"></td>
 				</tr>
 				<tr>
 					<td><label>12. Tên theo hệ thống phân loại của BTTNVN:</label></td>
-					<td><input type="text"  title="{{tooltips[10]}}" name="tenTheoBaoTang" ng-model="data.tenTheoBaoTang" class="input-form"></td>
+					<td><input type="text"  title="{{tooltips['tenTheoBaoTang']}}" name="tenTheoBaoTang" ng-model="data.tenTheoBaoTang" class="input-form"></td>
 				</tr>
 				<tr>
 					<td><label>13. Thông tin khác </label></td>
-					<td><input type="text" ng-model="data.thongTinKhac2" title="{{tooltips[13]}}" name="thongTinKhac2" class="input-form"></td>
+					<td><input type="text" ng-model="data.thongTinKhac2" title="{{tooltips['thongTinKhac2']}}" name="thongTinKhac2" class="input-form"></td>
 				</tr>
 			</table>
 		</div>
@@ -79,12 +79,12 @@
 				<h3 class="h3-title">SỐ LƯỢNG VÀ CHẤT LƯỢNG MẪU VẬT</h3>
 				<tr>
 					<td><label>14. Số lượng tiêu bản:</label></td>
-					<td><input type="number" disabled min = "0" title="{{tooltips[15]}}" name="soLuongTieuBan" ng-model="data.soLuongTieuBan" class="input-form"></td>
+					<td><input type="number" disabled min = "0" title="{{tooltips['soLuongTieuBan']}}" name="soLuongTieuBan" ng-model="data.soLuongTieuBan" class="input-form"></td>
 				</tr>
 				<tr>
 					<td><label>15. Loại mẫu vật<span class="has-required"> (*)</span>:</label></td>
 					<td>
-						<input type="text" title="{{tooltips[16]}}" name="loaiMauVat" multiple='multiple' class="input-form flexdatalist" data-toggle-selected='true' data-min-length='1' data-toggle-selected='true' ng-model="data.loaiMauVat" list="loaiMauVat">
+						<input type="text" title="{{tooltips['loaiMauVat']}}" name="loaiMauVat" multiple='multiple' class="input-form flexdatalist" data-toggle-selected='true' data-min-length='1' data-toggle-selected='true' ng-model="data.loaiMauVat" list="loaiMauVat">
 						<datalist id="loaiMauVat">
 							<option value="Mẫu nghiên cứu">Mẫu nghiên cứu</option>
 							<option value="Mẫu trưng bày">Mẫu trưng bày</option>
@@ -100,7 +100,7 @@
 							<td><span>Chiều cao: </span></td>
 								<td>					    
 								    <span class="box">
-								      <input type="text" title="{{tooltips[17]}}" name="chieuCao" ng-model="data.chieuCao" class="datatext" id="datatext">
+								      <input type="text" title="{{tooltips['chieuCao']}}" name="chieuCao" ng-model="data.chieuCao" class="datatext" id="datatext">
 								      <select class="contentselect" ng-model="data.donVi_chieuCao" name="donVi_chieuCao">
 								          <option value="mm">mm</option>
 								          <option value="cm">cm</option>
@@ -113,7 +113,7 @@
 								<td><span>Chiều rộng: </span></td>
 								<td>					    
 								    <span class="box">
-								      <input type="text" title="{{tooltips[17]}}" name="chieuRong" ng-model="data.chieuRong" class="datatext" id="datatext">
+								      <input type="text" title="{{tooltips['chieuRong']}}" name="chieuRong" ng-model="data.chieuRong" class="datatext" id="datatext">
 								      <select class="contentselect" ng-model="data.donVi_chieuRong" ng-model="data.chieuCao" name="donVi_chieuRong">
 								          <option value="mm">mm</option>
 								          <option value="cm">cm</option>
@@ -127,7 +127,7 @@
 								<td><span>Chiều dài: </span></td>
 								<td>					    
 								    <span class="box">
-								      <input type="text" title="{{tooltips[17]}}" name="chieuDai" ng-model="data.chieuDai" class="datatext" id="datatext">
+								      <input type="text" title="{{tooltips['chieuDai']}}" name="chieuDai" ng-model="data.chieuDai" class="datatext" id="datatext">
 								      <select class="contentselect" ng-model="data.donVi_chieuDai" name="donVi_chieuDai">
 								          <option value="mm">mm</option>
 								          <option value="cm">cm</option>
@@ -140,7 +140,7 @@
 								<td><span>Trọng lượng: </span></td>
 								<td>					    
 								    <span class="box">
-								      <input type="text" title="{{tooltips[17]}}" name="trongLuong" ng-model="data.trongLuong" class="datatext" id="datatext">
+								      <input type="text" title="{{tooltips['trongLuong']}}" name="trongLuong" ng-model="data.trongLuong" class="datatext" id="datatext">
 								      <select class="contentselect" ng-model="data.donVi_trongLuong" name="donVi_trongLuong">
 											<option value="mg">mg</option>
 								         	<option value="g">g</option>
@@ -154,7 +154,7 @@
 								<td><span>Thể tích</span></td>
 								<td>					    
 								    <span class="box">
-								      <input type="text" title="{{tooltips[17]}}" name="theTich" class="datatext" ng-model="data.theTich" id="datatext">
+								      <input type="text" title="{{tooltips['theTich']}}" name="theTich" class="datatext" ng-model="data.theTich" id="datatext">
 								      <select class="contentselect" ng-model="data.donVi_theTich" name="donVi_theTich">
 								          <option value="ml">ml</option>
 								          <option value="l">l</option>
