fix tips geo form

--- a/app/views/users/add-animal-form.template.html
+++ b/app/views/users/add-animal-form.template.html
@@ -111,7 +111,7 @@
 				<td><input type="text" title="{{tooltips['ngayDinhTen']}}" name="ngayDinhTen" ng-model="data.ngayDinhTen" class="input-form datepicker"></td>
 			</tr>
 			<tr>
-				<td><label>09. Tên Việt Nam <span class="has-required"> (*)</span>:</label></td>
+				<td><label>09. Tên Việt Nam (phổ thông) <span class="has-required"> (*)</span>:</label></td>
 				<td><input type="text" title="{{tooltips['tenVietNam']}}" name="tenVietNam" ng-model="data.tenVietNam" class="input-form" required></td>
 			</tr>
 			<tr>
