--- a/app/views/users/edit/edit-geological-form.template.html
+++ b/app/views/users/edit/edit-geological-form.template.html
@@ -54,15 +54,15 @@
 				</tr>
 				<tr>
 					<td><label>09. Tên Việt Nam (phổ thông) <span class="has-required">(*)</span>:</label></td>
-					<td><input type="text" title="{{tooltips['tenVietNam'}}" name="tenVietNam" ng-model="data.tenVietNam" class="input-form" required></td>
+					<td><input type="text" title="{{tooltips['tenVietNam']}}" name="tenVietNam" ng-model="data.tenVietNam" class="input-form" required></td>
 				</tr>
 				<tr>
 					<td><label>10. Tên địa phương:</label></td>
-					<td><input type="text" title="{{tooltips['tenDiaPhuong'}}" name="tenDiaPhuong" ng-model="data.tenDiaPhuong" class="input-form"></td>
+					<td><input type="text" title="{{tooltips['tenDiaPhuong']}}" name="tenDiaPhuong" ng-model="data.tenDiaPhuong" class="input-form"></td>
 				</tr>
 				<tr>
 					<td><label>11. Tên Tiếng Anh:</label></td>
-					<td><input type="text" title="{{tooltips['tenTiengAnh'}}" name="tenTiengAnh" ng-model="data.tenTiengAnh" class="input-form"></td>
+					<td><input type="text" title="{{tooltips['tenTiengAnh']}}" name="tenTiengAnh" ng-model="data.tenTiengAnh" class="input-form"></td>
 				</tr>
 				<tr>
 					<td><label>12. Tên theo hệ thống phân loại của BTTNVN:</label></td>
