--- a/app/views/users/edit/edit-vegetable-form.template.html
+++ b/app/views/users/edit/edit-vegetable-form.template.html
@@ -110,7 +110,7 @@
 					<td><input type="text" class="input-form datepicker" title="{{tooltips['ngayDinhTen']}}" name="ngayDinhTen" ng-model="data.ngayDinhTen" ></td>
 				</tr>
 				<tr>
-					<td><label>06.Tên Việt Nam <span class="has-required">(*)</span>:</label></td>
+					<td><label>06.Tên Việt Nam (phổ thông) <span class="has-required">(*)</span>:</label></td>
 					<td><input type="text" title="{{tooltips['tenVietNam']}}" name="tenVietNam" ng-model="data.tenVietNam" class="input-form" required></td>
 				</tr>
 				<tr>
