fix hinhThucNhapMau UI

--- a/app/views/users/add-geological-form.template.html
+++ b/app/views/users/add-geological-form.template.html
@@ -515,7 +515,7 @@
 				<tr>
 					<td><label>61. Hình thức nhập mẫu:</label></td>
 					<td>
-						<input type="text" list="hinhThucNhapMau" class="select-box" ng-model="data.hinhThucNhapMau" title="{{tooltips['hinhThucNhapMau']}}" name="hinhThucNhapMau">
+						<input type="text" list="hinhThucNhapMau" class="input-form flexdatalist" data-min-length='1' data-toggle-selected='true' multiple='multiple' ng-model="data.hinhThucNhapMau" title="{{tooltips['hinhThucNhapMau']}}" name="hinhThucNhapMau">
 					</td>
 				</tr>
 
