--- a/app/views/users/add-animal-form.template.html
+++ b/app/views/users/add-animal-form.template.html
@@ -142,7 +142,7 @@
 			<tr>
 				<td><label>15. Loại mẫu vật<span class="has-required"> (*)</span>:</label></td>
 				<td>
-					<input type="text" multiple title="{{tooltips['loaiMauVat']}}" name="loaiMauVat" class="input-form flexdatalist" ng-model="data.loaiMauVat" list="loaiMauVat" data-min-length='1' data-toggle-selected='true' multiple='multiple' >
+					<input type="text" multiple title="{{tooltips['loaiMauVat']}}" name="loaiMauVat" class="input-form flexdatalist" data-min-length='1' data-toggle-selected='true' multiple='multiple' ng-model="data.loaiMauVat" list="loaiMauVat"  >
 					<datalist id="loaiMauVat">
 						<option value="Mẫu nghiên cứu">Mẫu nghiên cứu</option>
 						<option value="Mẫu trưng bày">Mẫu trưng bày</option>
@@ -458,7 +458,7 @@
 			</tr>
 			<tr>
 				<td>Thời gian xử lý chế tác:</td>
-				<td><input type="text" title="{{tooltips['thoiGianXuLy']}}" name="thoiGianXuLy" ng-model="data.thoiGianXuLy" class="input-form datapicker"></td>
+				<td><input type="text" title="{{tooltips['thoiGianXuLy']}}" name="thoiGianXuLy" ng-model="data.thoiGianXuLy" class="input-form datepicker"></td>
 			</tr>
 			<tr>
 				<td>Người xử lý, chế tác:</td>
@@ -559,7 +559,7 @@
 			<tr>
 				<td><label>57. Hình thức nhập mẫu:</label></td>
 				<td>
-					<input type="text" list="hinhThucNhapMau" class="select-box" ng-model="data.hinhThucNhapMau" title="{{tooltips['hinhThucNhapMau']}}" name="hinhThucNhapMau">
+					<input type="text" list="hinhThucNhapMau" class="input-form flexdatalist" data-min-length='1' data-toggle-selected='true' multiple='multiple' ng-model="data.hinhThucNhapMau" title="{{tooltips['hinhThucNhapMau']}}" name="hinhThucNhapMau">
 				</td>
 			</tr>
 			<tr>
