--- a/app/views/users/add-land-form.template.html
+++ b/app/views/users/add-land-form.template.html
@@ -325,7 +325,7 @@
 					<td><input type="file" ng-model="data.banDo" title="{{tooltips['banDo']}}" accept=".zip, .rar" name="banDo" class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>37. Kết quả phân tích định tuổi: </label></td>
+					<td><label>37. Kết quả phân tích định tuổi (bằng phương pháp truyền thống, đồng vị và Phương pháp khác …):  </label></td>
 					<td><input type="file" multiple accept=".doc, .docx, .pdf" title="{{tooltips['ketQuaPhanTichDinhTuoi']}}" name="ketQuaPhanTichDinhTuoi" ng-model="data.ketQuaPhanTichDinhTuoi" class="input-form"></td>
 				</tr>
 				<tr>
