--- a/app/views/users/edit/edit-land-form.template.html
+++ b/app/views/users/edit/edit-land-form.template.html
@@ -54,7 +54,7 @@
 				</tr>
 				<tr>
 					<td><label>09. Tên Việt Nam(phổ thông) <span class="has-required">(*)</span>:</label></td>
-					<td><input type="text"  title="{{tooltips['tenVietNam'}}" name="tenVietNam" ng-model="data.tenVietNam" class="input-form" required></td>
+					<td><input type="text"  title="{{tooltips['tenVietNam']}}" name="tenVietNam" ng-model="data.tenVietNam" class="input-form" required></td>
 				</tr>
 				<tr>
 					<td><label>10. Tên địa phương:</label></td>
