--- a/app/views/users/edit/edit-animal-form.template.html
+++ b/app/views/users/edit/edit-animal-form.template.html
@@ -304,14 +304,35 @@
 					</table>
 				</td>
 			</tr>
-			<tr><td><label>24. Vị trí toạ độ theo hệ toạ độ VN 2000: </td></tr>
 			<tr>
-				<td>Vĩ độ N <span class="has-required"> (*)</span>: </td>
-				<td><input type="text" ng-model="data.viDo" title="{{tooltips['viDo']}}" name="viDo" class="input-form" required></td>
+				<td colspan="2">
+					<label>24. Vị trí tọa độ theo hệ tọa độ Việt Nam 2000: </label>
+					<input type="radio" name="fViTriToaDo" id="vitri-dms" value="true" ng-click="dms()"><span class="label label-default"> DMS</span>
+					<input type="radio" name="fViTriToaDo" id="vitri-dd" value="false" ng-click="dd()"><span class="label label-default"> DD</span>
+				</td>
 			</tr>
 			<tr>
-				<td>Kinh độ E<span class="has-required"> (*)</span>:</td>
-				<td><input type="text" ng-model="data.kinhDo" title="{{tooltips['kinhDo']}}" name="kinhDo" class="input-form" required></td>
+				<td>Vĩ độ N <span class="has-required">(*)</span>:</td>
+				<td>
+					<input type="text" id="dms" ng-show="!showCoor" title="{{tooltips['viDo']}}" name="viDo" ng-model="data.viDo" class="input-form" required>
+					<div id="dd" ng-show="showCoor" style="margin-top: 5px;" title="{{tooltips['viDo']}}">
+						<input type="text" ng-model= "vido_do" ng-change="latChange()" style="width: 30px; border-width: 1px; border-radius: 3px;" name=""> độ
+						<input type="text" ng-model= "vido_phut" ng-change="latChange()" style="width: 30px; border-width: 1px; border-radius: 3px;" name=""> phút
+						<input type="text" ng-model= "vido_giay" ng-change="latChange()" style="width: 30px; border-width: 1px; border-radius: 3px;" name=""> giây
+					</div>
+				</td>
+			</tr>
+			<tr>
+				<td>Kinh độ E <span class="has-required">(*)</span>:</td>
+				<td>
+					<input type="text" id="dms" ng-show="!showCoor" title="{{tooltips['kinhDo']}}" name="kinhDo" ng-model="data.kinhDo" class="input-form" required>
+					<div id="dd" ng-show="showCoor" style="margin-top: 5px;" title="{{tooltips['kinhDo']}}">
+						<input type="text" ng-model="kinhdo_do" ng-change="lonChange()" style="width: 30px; border-width: 1px; border-radius: 3px;" name=""> độ
+						<input type="text" ng-model="kinhdo_phut" ng-change="lonChange()" style="width: 30px; border-width: 1px; border-radius: 3px;" name=""> phút
+						<input type="text" ng-model="kinhdo_giay" ng-change="lonChange()" style="width: 30px; border-width: 1px; border-radius: 3px;" name=""> giây
+					</div>
+				</td>
+				</td>
 			</tr>
 			<tr>
 				<td><label>25. Độ cao (m) <span class="has-required"> (*)</span>: </label></td>
@@ -441,7 +462,7 @@
 			</tr>
 			<tr>
 				<td>Thời gian xử lý chế tác:</td>
-				<td><input type="text" title="{{tooltips['thoiGianXuLy']}}" name="thoiGianXuLy" ng-model="data.thoiGianXuLy" class="input-form"></td>
+				<td><input type="text" title="{{tooltips['thoiGianXuLy']}}" name="thoiGianXuLy" ng-model="data.thoiGianXuLy" class="input-form datepicker"></td>
 			</tr>
 			<tr>
 				<td>Người xử lý, chế tác:</td>
