--- a/app/views/users/add-geological-form.template.html
+++ b/app/views/users/add-geological-form.template.html
@@ -86,12 +86,13 @@
 				<tr>
 					<td><label>15. Loại mẫu vật<span class="has-required"> (*)</span>:</label></td>
 					<td>
-						<input type="text" title="{{tooltips['loaiMauVat']}}" name="loaiMauVat" class="input-form" ng-model="data.loaiMauVat" list="loaiMauVat" multiple='multiple' class="input-form flexdatalist" data-toggle-selected='true' data-min-length='1' data-toggle-selected='true'>
+						<input type="text" title="{{tooltips['loaiMauVat']}}" name="loaiMauVat" ng-model="data.loaiMauVat" list="loaiMauVat" multiple='multiple' class="input-form flexdatalist" data-toggle-selected='true' data-min-length='0' data-toggle-selected='true'>
 						<datalist id="loaiMauVat">
 							<option value="Mẫu nghiên cứu">Mẫu nghiên cứu</option>
 							<option value="Mẫu trưng bày">Mẫu trưng bày</option>
 							<option value="Mẫu type">Mẫu type</option>
 						</datalist>
+
 					</td>
 				</tr>
 				<tr><td><label>16. Kích thước mẫu vật<span class="has-required"> (*)</span>:</label></td></tr>
@@ -478,7 +479,7 @@
 				<tr>
 					<td><label>55. Giá trị sử dụng (tài nguyên)(nếu có):</label></td>
 					<td>
-						<input type="" title="{{tooltips['giaTriSuDung']}}" name="giaTriSuDung" ng-model="data.giaTriSuDung" list="giaTriSuDung" multiple='multiple' class="input-form flexdatalist" data-toggle-selected='true' data-min-length='1' data-toggle-selected='true'>
+						<input type="" title="{{tooltips['giaTriSuDung']}}" name="giaTriSuDung" ng-model="data.giaTriSuDung" list="giaTriSuDung" multiple='multiple' class="input-form flexdatalist" data-toggle-selected='true' data-min-length='0' data-toggle-selected='true'>
 						<datalist id="giaTriSuDung">
 							<option>Khoa học</option>
 							<option>Y học</option>
@@ -515,7 +516,7 @@
 				<tr>
 					<td><label>61. Hình thức nhập mẫu:</label></td>
 					<td>
-						<input type="text" list="hinhThucNhapMau" class="input-form flexdatalist" data-min-length='1' data-toggle-selected='true' multiple='multiple' ng-model="data.hinhThucNhapMau" title="{{tooltips['hinhThucNhapMau']}}" name="hinhThucNhapMau">
+						<input type="text" list="hinhThucNhapMau" class="input-form flexdatalist" data-min-length='0' data-toggle-selected='true' multiple='multiple' ng-model="data.hinhThucNhapMau" title="{{tooltips['hinhThucNhapMau']}}" name="hinhThucNhapMau">
 					</td>
 				</tr>
 
