--- a/app/views/users/edit/edit-vegetable-form.template.html
+++ b/app/views/users/edit/edit-vegetable-form.template.html
@@ -332,11 +332,11 @@
 					</td>
 				</tr>
 				<tr>
-					<td><label>25. Độ cao <span class="has-required">(*)</span>: </label></td>
+					<td><label>25. Độ cao (m)<span class="has-required">(*)</span>: </label></td>
 					<td><input type="text" title="{{tooltips['doCao']}}" name="doCao" ng-model="data.doCao" class="input-form" required ></td>
 				</tr>
 				<tr>
-					<td><label>26. Độ sâu:</label></td>
+					<td><label>26. Độ sâu (m):</label></td>
 					<td><input type="number" title="{{tooltips['doSau']}}" name="doSau" ng-model="data.doSau" class="input-form"></td>
 				</tr>
 				<tr>
