--- a/app/views/users/edit/edit-land-form.template.html
+++ b/app/views/users/edit/edit-land-form.template.html
@@ -279,11 +279,11 @@
 					<td><input type="text"  title="{{tooltips['mauChatOViTriThuMau']}}" name="mauChatOViTriThuMau" ng-model="data.mauChatOViTriThuMau" class="input-form" required></td>
 				</tr>
 				<tr>
-					<td><label>26. Độ cao <span class="has-required">(*)</span>: </label></td>
+					<td><label>26. Độ cao (m)<span class="has-required">(*)</span>: </label></td>
 					<td><input type="number" min="0" title="{{tooltips['doCao']}}" name="doCao" ng-model="data.doCao" class="input-form" required ></td>
 				</tr>
 				<tr>
-					<td><label>27. Độ sâu:</label></td>
+					<td><label>27. Độ sâu (m):</label></td>
 					<td><input type="number" title="{{tooltips['doSau']}}" name="doSau" ng-model="data.doSau" min="0" class="input-form"></td>
 				</tr>
 				<tr>
