--- a/app/views/users/add-paleontological-form.template.html
+++ b/app/views/users/add-paleontological-form.template.html
@@ -562,7 +562,7 @@
 
 				<tr>
 					<td><label>58. Nơi lưu trữ mẫu:</label></td>
-					<td><input type="text" title="{{tooltips['noiLuuTru']}}" name="noiLuuTru" ng-model="data.noiLuuTru" class="input-form"></td>
+					<td><input type="text" title="{{tooltips['noiLuuTruMau']}}" name="noiLuuTruMau" ng-model="data.noiLuuTruMau" class="input-form"></td>
 				</tr>
 				<tr>
 					<td><label>59. Khu lưu trữ mẫu:</label></td>
