--- a/app/views/users/edit/edit-geological-form.template.html
+++ b/app/views/users/edit/edit-geological-form.template.html
@@ -543,7 +543,7 @@
 				</tr>
 				<tr>
 					<td><label>64. Nơi lưu trữ:</label></td>
-					<td><input type="text" title="{{tooltips['noiLuuTru']}}" name="noiLuuTru" ng-model="data.noiLuuTru" class="input-form"></td>
+					<td><input type="text" title="{{tooltips['noiLuuTruMau']}}" name="noiLuuTruMau" ng-model="data.noiLuuTruMau" class="input-form"></td>
 				</tr>
 				<tr>
 					<td><label>65. Khu lưu trữ mẫu:</label></td>
