--- a/app/views/users/edit/edit-vegetable-form.template.html
+++ b/app/views/users/edit/edit-vegetable-form.template.html
@@ -579,7 +579,7 @@
 				</tr>
 				<tr>
 					<td><label>59. Nơi lưu trữ:</label></td>
-					<td><input type="text" title="{{tooltips['noiLuuTru']}}" name="noiLuuTru" ng-model="data.noiLuuTru" class="input-form"></td>
+					<td><input type="text" title="{{tooltips['noiLuuTruMau']}}" name="noiLuuTruMau" ng-model="data.noiLuuTruMau" class="input-form"></td>
 				</tr>
 				<tr>
 					<td><label>60. Khu lưu trữ mẫu:</label></td>
